# cv-generator

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cv_generator.py  multicz.toml  osv-scanner.toml  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-rewrite.yml  publish.yml
.multicz/: state.json
scripts/: add_license_header.py  rewrite-dependabot-commit.sh
src/: cv_generator.py
